Modify index.html & styles.css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
-	<title>My Shitty Website</title>
+	<title>My pleasure Website</title>
 </head>
 <body>
 	<p>This should be in my git repository!</p>
