--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 	<title>My pleasure Website</title>
 </head>
 <body>
-	<p>This should be in my git repository!</p>
+	<p>This site should be password protected!</p>
 </body>
 </html>
